--- a/index.html
+++ b/index.html
@@ -13,11 +13,11 @@
 
 	<body hidden>
 		<div class="top-row">
-			<div class="title">Dieter Rams inspired colors</div>
+			<div class="title text">Dieter Rams inspired colors</div>
 			<div class="format-picker">
 				<select name="format" id="format" title="Color name format">
 					<option class="format-option" value="hex6">hex</option>
-					<option class="format-option" value="rgb">rgb</option>
+					<option class="format-option" selected value="rgb">rgb</option>
 					<option class="format-option" value="prgb">%rgb</option>
 					<option class="format-option" value="hsl">hsl</option>
 					<option class="format-option" value="hsv">hsv</option>
@@ -25,25 +25,15 @@
 				</select>
 			</div>
 			<div class="theme-picker">
-				<button type="button">light</button>
+				<button class="text" type="button">light</button>
 				&thinsp;/&thinsp;
-				<button type="button">dark</button>
+				<button class="text" type="button">dark</button>
 				&thinsp;/&thinsp;
-				<!-- <toolcool-color-picker id="color-picker" type="button" popup-position="right" button-width="2rem"
-					button-height=".8rem" button-padding="1px"></toolcool-color-picker> -->
-				<button type="button">pick</button>
+				<button class="text" type="button">sample</button>
 			</div>
 		</div>
 		<div class="container">
-			<div class="box"></div>
-			<div class="box"></div>
-			<div class="box"></div>
-			<div class="box"></div>
-			<div class="box"></div>
-			<div class="box"></div>
-		</div>
-		<div class="container">
-			<div class="box"></div>
+			<div class="box text"></div>
 			<div class="box"></div>
 			<div class="box"></div>
 			<div class="box"></div>
@@ -51,15 +41,7 @@
 			<div class="box"></div>
 		</div>
 		<div class="container">
-			<div class="box"></div>
-			<div class="box"></div>
-			<div class="box"></div>
-			<div class="box"></div>
-			<div class="box"></div>
-			<div class="box"></div>
-		</div>
-		<div class="container">
-			<div class="box"></div>
+			<div class="box text"></div>
 			<div class="box"></div>
 			<div class="box"></div>
 			<div class="box"></div>
@@ -67,15 +49,7 @@
 			<div class="box"></div>
 		</div>
 		<div class="container">
-			<div class="box"></div>
-			<div class="box"></div>
-			<div class="box"></div>
-			<div class="box"></div>
-			<div class="box"></div>
-			<div class="box"></div>
-		</div>
-		<div class="container">
-			<div class="box"></div>
+			<div class="box text"></div>
 			<div class="box"></div>
 			<div class="box"></div>
 			<div class="box"></div>
@@ -83,15 +57,7 @@
 			<div class="box"></div>
 		</div>
 		<div class="container">
-			<div class="box"></div>
-			<div class="box"></div>
-			<div class="box"></div>
-			<div class="box"></div>
-			<div class="box"></div>
-			<div class="box"></div>
-		</div>
-		<div class="container">
-			<div class="box"></div>
+			<div class="box text"></div>
 			<div class="box"></div>
 			<div class="box"></div>
 			<div class="box"></div>
@@ -99,7 +65,7 @@
 			<div class="box"></div>
 		</div>
 		<div class="container">
-			<div class="box"></div>
+			<div class="box text"></div>
 			<div class="box"></div>
 			<div class="box"></div>
 			<div class="box"></div>
@@ -107,7 +73,39 @@
 			<div class="box"></div>
 		</div>
 		<div class="container">
+			<div class="box text"></div>
 			<div class="box"></div>
+			<div class="box"></div>
+			<div class="box"></div>
+			<div class="box"></div>
+			<div class="box"></div>
+		</div>
+		<div class="container">
+			<div class="box text"></div>
+			<div class="box"></div>
+			<div class="box"></div>
+			<div class="box"></div>
+			<div class="box"></div>
+			<div class="box"></div>
+		</div>
+		<div class="container">
+			<div class="box text"></div>
+			<div class="box"></div>
+			<div class="box"></div>
+			<div class="box"></div>
+			<div class="box"></div>
+			<div class="box"></div>
+		</div>
+		<div class="container">
+			<div class="box text"></div>
+			<div class="box"></div>
+			<div class="box"></div>
+			<div class="box"></div>
+			<div class="box"></div>
+			<div class="box"></div>
+		</div>
+		<div class="container">
+			<div class="box text"></div>
 			<div class="box"></div>
 			<div class="box"></div>
 			<div class="box"></div>
@@ -115,8 +113,6 @@
 			<div class="box"></div>
 		</div>
 
-		<!-- <script src="https://cdn.jsdelivr.net/npm/toolcool-color-picker@1/dist/toolcool-color-picker.min.js"></script> -->
-		<!-- <script src="https://cdn.jsdelivr.net/npm/@ctrl/tinycolor@4/dist/public_api.min.js"></script> -->
 		<script src="index.js" type="module"></script>
 	</body>
 
