Fixed text color contrast in boxes on page refresh

--- a/index.html
+++ b/index.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="en-US">
 
 	<head>
 		<meta charset="UTF-8">
@@ -15,7 +15,7 @@
 		<script src="setInitialColorTheme.js" type="module"></script>
 	</head>
 
-	<body hidden>
+	<body>
 		<div class="top-row">
 			<div class="title text">Dieter Rams inspired colors</div>
 			<div class="format-picker">
