Organized files into directories Made local copies of CSS files Changed font

--- a/index.html
+++ b/index.html
@@ -5,19 +5,20 @@
 		<meta charset="UTF-8">
 		<meta name="viewport" content="width=device-width, initial-scale=1.0">
 		<title>Dieter Rams inspired colors</title>
-		<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/normalize/8.0.1/normalize.min.css"
-			integrity="sha512-NhSC1YmyruXifcj/KFRWoC561YpHpc5Jtzgvbuzx5VozKpWvQ+4nXhPdFgmx8xqexRcpAglTj9sIBWINXa8x5w=="
-			crossorigin="anonymous" referrerpolicy="no-referrer">
-		<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/slim-select/2.6.0/slimselect.min.css"
-			integrity="sha512-GvqWM4KWH8mbgWIyvwdH8HgjUbyZTXrCq0sjGij9fDNiXz3vJoy3jCcAaWNekH2rJe4hXVWCJKN+bEW8V7AAEQ=="
-			crossorigin="anonymous" referrerpolicy="no-referrer">
-		<link rel="stylesheet" href="styles.css">
-		<script src="setInitialColorTheme.js" type="module"></script>
+		<meta name="description" content="Color pallets Dieter Rams might have used.">
+		<meta name="keywords"
+			content="Dieter Rams, color, pallet, color pallets, design inspiration, design, German design, Braun, Bauhaus, minimal design, minimalistic design, web design, web development, web developer, front-end, front-end development, front-end developer, web, development, developer, html, css, javascript, js, node, nodejs, node.js, node js, web app, web application, web-application, web-app, webapp, webdev, web-dev, web-developer, web-development, typescript">
+		<meta name="author" content="Chris Strawser">
+		<link rel="canonical" href="https://dieterrams.design/">
+		<link rel="stylesheet" href="css/normalize.min.css">
+		<link rel="stylesheet" href="css/slimselect.min.css">
+		<link rel="stylesheet" href="css/styles.css">
+		<script src="js/setInitialColorTheme.js" type="module"></script>
 	</head>
 
 	<body>
 		<div class="top-row">
-			<div class="title text">Dieter Rams inspired colors</div>
+			<h1 class="title text">Dieter Rams-inspired colors</h1>
 			<div class="format-picker">
 				<select id="format" title="Color name format">
 					<option class="format-option" value="hex6">hex</option>
@@ -37,7 +38,7 @@
 			</div>
 		</div>
 		<div class="container">
-			<div class="box text"></div>
+			<h2 class="text">DR 1</h2>
 			<div class="box"></div>
 			<div class="box"></div>
 			<div class="box"></div>
@@ -45,7 +46,7 @@
 			<div class="box"></div>
 		</div>
 		<div class="container">
-			<div class="box text"></div>
+			<h2 class="text">DR 2</h2>
 			<div class="box"></div>
 			<div class="box"></div>
 			<div class="box"></div>
@@ -53,7 +54,7 @@
 			<div class="box"></div>
 		</div>
 		<div class="container">
-			<div class="box text"></div>
+			<h2 class="text">DR 3</h2>
 			<div class="box"></div>
 			<div class="box"></div>
 			<div class="box"></div>
@@ -61,7 +62,7 @@
 			<div class="box"></div>
 		</div>
 		<div class="container">
-			<div class="box text"></div>
+			<h2 class="text">DR 4</h2>
 			<div class="box"></div>
 			<div class="box"></div>
 			<div class="box"></div>
@@ -69,7 +70,7 @@
 			<div class="box"></div>
 		</div>
 		<div class="container">
-			<div class="box text"></div>
+			<h2 class="text">DR 5</h2>
 			<div class="box"></div>
 			<div class="box"></div>
 			<div class="box"></div>
@@ -77,7 +78,7 @@
 			<div class="box"></div>
 		</div>
 		<div class="container">
-			<div class="box text"></div>
+			<h2 class="text">DR 6</h2>
 			<div class="box"></div>
 			<div class="box"></div>
 			<div class="box"></div>
@@ -85,7 +86,7 @@
 			<div class="box"></div>
 		</div>
 		<div class="container">
-			<div class="box text"></div>
+			<h2 class="text">DR 7</h2>
 			<div class="box"></div>
 			<div class="box"></div>
 			<div class="box"></div>
@@ -93,7 +94,7 @@
 			<div class="box"></div>
 		</div>
 		<div class="container">
-			<div class="box text"></div>
+			<h2 class="text">DR 8</h2>
 			<div class="box"></div>
 			<div class="box"></div>
 			<div class="box"></div>
@@ -101,7 +102,7 @@
 			<div class="box"></div>
 		</div>
 		<div class="container">
-			<div class="box text"></div>
+			<h2 class="text">DR 9</h2>
 			<div class="box"></div>
 			<div class="box"></div>
 			<div class="box"></div>
@@ -109,7 +110,7 @@
 			<div class="box"></div>
 		</div>
 		<div class="container">
-			<div class="box text"></div>
+			<h2 class="text">DR 10</h2>
 			<div class="box"></div>
 			<div class="box"></div>
 			<div class="box"></div>
@@ -117,7 +118,7 @@
 			<div class="box"></div>
 		</div>
 
-		<script src="index.js" type="module"></script>
+		<script src="js/index.js" type="module"></script>
 	</body>
 
 </html>
