--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
 		<title>Dieter Rams inspired colors</title>
 		<meta name="description" content="Color pallets Dieter Rams might have used.">
 		<meta name="keywords"
-			content="Dieter Rams, color, pallet, color pallets, design inspiration, design, German design, Braun, Bauhaus, minimal design, minimalistic design, web design, web development, web developer, front-end, front-end development, front-end developer, web, development, developer, html, css, javascript, js, node, nodejs, node.js, node js, web app, web application, web-application, web-app, webapp, webdev, web-dev, web-developer, web-development, typescript">
+			content="Dieter Rams, color, pallet, color pallets, design inspiration, design, German design, Braun, Bauhaus, minimal design, minimalistic design, web design, web development, web developer, front-end, front-end development, front-end developer, web, development, developer, html, css, javascript, js, typescript">
 		<meta name="author" content="Chris Strawser">
 		<link rel="canonical" href="https://dieterrams.design/">
 		<link rel="stylesheet" href="css/normalize.min.css">
@@ -116,6 +116,13 @@
 			<div class="box"></div>
 			<div class="box"></div>
 			<div class="box"></div>
+		</div>
+
+		<div class="footer">
+			<span class="text">Inspired by Dieter Rams</span>
+			<span class="text footer-item">© 2023 Chris Strawser</span>
+			<a href="https://github.com/mcochris/DieterRamsColors" class="text" target="_blank"
+				rel="noopener noreferrer"><span class="text">GitHub</span></a>
 		</div>
 
 		<script src="js/index.js" type="module"></script>
