--- a/index.html
+++ b/index.html
@@ -9,31 +9,25 @@
 		<meta name="keywords"
 			content="Dieter Rams, color, pallet, color pallets, design inspiration, design, German design, Braun, Bauhaus, minimal design, minimalistic design, web design, web development, web developer, front-end, front-end development, front-end developer, web, development, developer, html, css, javascript, js, typescript">
 		<meta name="author" content="Chris Strawser">
-		<link rel="canonical" href="https://dieterrams.design/">
 		<link rel="stylesheet" href="css/normalize.min.css">
-		<link rel="stylesheet" href="css/slimselect.min.css">
 		<link rel="stylesheet" href="css/styles.css">
 		<script src="js/setInitialColorTheme.js" type="module"></script>
 	</head>
 
 	<body>
 		<div class="top-row">
-			<h1 class="title text">Dieter Rams-inspired colors</h1>
+			<h1 class="text">Dieter Rams-inspired colors</h1>
 			<div class="format-picker">
-				<select id="format" title="Color name format">
-					<option class="format-option" value="hex6">hex</option>
-					<option class="format-option" selected value="rgb">rgb</option>
-					<option class="format-option" value="prgb">%rgb</option>
-					<option class="format-option" value="hsl">hsl</option>
-					<option class="format-option" value="hsv">hsv</option>
-					<option class="format-option" value="off">off</option>
-				</select>
+				<button class="text" value="hex6" type="button">hex</button>
+				<button class="text" value="rgb" type="button">rgb</button>
+				<button class="text" value="prgb" type="button">%rgb</button>
+				<button class="text" value="hsl" type="button">hsl</button>
+				<button class="text" value="hsv" type="button">hsv</button>
+				<button class="text" value="off" type="button">off</button>
 			</div>
 			<div class="theme-picker">
 				<button class="text" type="button">light</button>
-				&thinsp;/&thinsp;
 				<button class="text" type="button">dark</button>
-				&thinsp;/&thinsp;
 				<button class="text" type="button">sample</button>
 			</div>
 		</div>
