Some optimizations to improve load time

--- a/index.html
+++ b/index.html
@@ -9,7 +9,8 @@
 		<meta name="keywords"
 			content="Dieter Rams, color, pallet, color pallets, design inspiration, design, German design, Braun, Bauhaus, minimal design, minimalistic design, web design, web development, web developer, front-end, front-end development, front-end developer, web, development, developer, html, css, javascript, js, typescript">
 		<meta name="author" content="Chris Strawser">
-		<link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/normalize.css/normalize.min.css">
+		<link rel="preload" href="fonts/Brandon_reg.otf" as="font" type="opentype" crossorigin>
+		<link rel="stylesheet" href="css/normalize.css">
 		<link rel="stylesheet" href="css/styles.css">
 		<script src="js/setInitialColorTheme.js" type="module"></script>
 	</head>
